--- a/Task Timer/src/main/res/layout/activity_main.xml
+++ b/Task Timer/src/main/res/layout/activity_main.xml
@@ -8,4 +8,41 @@
 	android:paddingBottom="@dimen/activity_vertical_margin"
 	tools:context=".MainActivity">
 
+	<RelativeLayout
+		android:id="@+id/task_input"
+		android:layout_alignParentTop="true"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content">
+
+		<EditText
+			android:id="@+id/task_input_name"
+			android:hint="@string/task_name_prompt"
+			android:layout_alignParentTop="true"
+			android:layout_toLeftOf="@+id/start"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content" />
+		<Button
+			android:id="@+id/start"
+			android:text="@string/start"
+			android:layout_alignParentRight="true"
+			android:layout_alignParentTop="true"
+			android:layout_width="100dp"
+			android:layout_height="wrap_content" />
+
+	</RelativeLayout>
+
+	<ListView
+		android:id="@+id/task_list"
+		android:layout_below="@+id/task_input"
+		android:layout_above="@+id/clear"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"></ListView>
+
+	<Button
+		android:id="@+id/clear"
+		android:text="@string/clear"
+		android:layout_alignParentBottom="true"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content" />
+
 </RelativeLayout>
