Wires up main layout with basic functionality

--- a/Task Timer/src/main/res/layout/activity_main.xml
+++ b/Task Timer/src/main/res/layout/activity_main.xml
@@ -27,7 +27,8 @@
 			android:layout_alignParentRight="true"
 			android:layout_alignParentTop="true"
 			android:layout_width="100dp"
-			android:layout_height="wrap_content" />
+			android:layout_height="wrap_content"
+			android:onClick="startClicked" />
 
 	</RelativeLayout>
 
@@ -43,6 +44,7 @@
 		android:text="@string/clear"
 		android:layout_alignParentBottom="true"
 		android:layout_width="match_parent"
-		android:layout_height="wrap_content" />
+		android:layout_height="wrap_content"
+		android:onClick="clearClicked" />
 
 </RelativeLayout>
